# clinical-trial-screening-env

./: .gitignore  README.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  requirements.txt
